# mpeg-vdmc-tm

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  COPYING  README.md  build.sh  clear.sh
cfg/: .gitignore  cfg-cond-ai-ll.yaml  cfg-cond-ai.yaml  cfg-cond-full-ld.yaml  cfg-cond-ld-trackedmode.yaml  cfg-cond-ld.yaml  cfg-cond-ra.yaml  cfg-site-default.yaml  cfg-tools-trackedmode.yaml  cfg-tools.yaml  informative-liftingQP.yaml  sequences-trackedmode.yaml  sequences.yaml
data/: GOF_0_disp_enc_256x160_10bits_p444.yuv  disp_256x160_10bits_p444.brg  encoder.cfg  gof_0_fr_0_cbase.drc  levi_fr0000.mtl  levi_fr0000_decoded.mtl  tex_512x512_10bits_p420.yuv  tex_512x512_8bits_p444.bgr
doc/: .gitignore  Makefile  mpegdoc.cls
results/: F032_v01.0.xlsm  F032_v02.0.xlsm  F032_v03.0.xlsm  F032_v04.0.xlsm  F032_v04.2.xlsm  F032_v05.0.xlsm  empty.xlsm  (+23 more)
source/app/: CMakeLists.txt  decode.cpp  encodeApp.cpp  encodeParams.h  metrics.cpp
source/app/unitTests/: colourConvert.cpp  common.hpp  draco.cpp  hm.cpp  main.cpp  metrics.cpp  vmesh.cpp
source/app/wrapper/: acdDecodeApp.cpp  acdEncodeApp.cpp  atlasDecodeApp.cpp  atlasEncodeApp.cpp  baseMeshDecodeApp.cpp  baseMeshEncodeApp.cpp  checksum.cpp  colourConverter.cpp  dracoDecoder.cpp  dracoEncoder.cpp  ebDecode.cpp  ebEncode.cpp  objToPlyConvert.cpp  videoDecoder.cpp  videoEncoder.cpp
source/lib/acDisplacementCommon/: CMakeLists.txt  acDisplacementContext.hpp  acDisplacementFrame.hpp
source/lib/acDisplacementDecoder/: CMakeLists.txt  acDisplacementDecoder.cpp  acDisplacementDecoder.hpp
source/lib/atlasEncoder/: CMakeLists.txt  atlasEncoder.cpp  atlasEncoder.hpp
source/lib/basemeshEncoder/: CMakeLists.txt  baseMeshEncoder.cpp  baseMeshEncoder.hpp
source/lib/ebBitstream/: CMakeLists.txt  ebBitstream.cpp  ebBitstream.h  ebReader.cpp  ebReader.hpp  ebWriter.cpp  ebWriter.hpp
source/lib/ebBitstream/syntaxElements/: ebCommon.hpp  meshAttributeCodingPayload.hpp  meshAttributeDeduplicateInformation.hpp  meshAttributeExtraData.hpp  meshAttributesDequantizeParameters.hpp  meshAttributesEncodingParameters.hpp  meshCoding.hpp  meshCodingHeader.hpp  meshDifferenceInformation.hpp  meshMaterialIDExtraData.hpp  meshNormalOctrahedralExtraData.hpp  meshPositionCodingPayload.hpp  meshPositionDeduplicateInformation.hpp  meshPositionDequantizeParameters.hpp  meshPositionEncodingParameters.hpp  meshTexCoordStretchExtraData.hpp
source/lib/ebBitstream/util/: logger.hpp
source/lib/ebCommon/: .clang-format  CMakeLists.txt  ebAttribute.h  ebAttributeImpl.h  ebCTMesh.h  ebCTMeshExt.h  ebChrono.cpp  ebChrono.h  ebColor.h  ebConfig.h  ebCornerTable.h  ebEntropy.h  ebEntropyContext.h  ebEntropyDirac.cpp  ebEntropyDirac.h  ebEntropyUtils.h  ebGeometry.cpp  ebGeometry.h  ebIO.cpp  ebIO.h  ebModel.h  ebModelConverter.cpp  ebModelConverter.h  ebVertexTraversal.h
source/lib/ebDecoder/: CMakeLists.txt  ebBasicDecoder.cpp.deprecated  ebBasicDecoder.h.deprecated  ebDecoder.cpp  ebDecoder.h  ebDecoderBase.cpp  ebDecoderBase.h  ebReversiDecoder.cpp  ebReversiDecoder.h
source/lib/ebEncoder/: CMakeLists.txt  ebBasicEncoder.cpp.deprecated  ebBasicEncoder.h.deprecated  ebEncoder.cpp  ebEncoder.h  ebReversiEncoder.cpp  ebReversiEncoder.h
source/lib/vmeshCommon/: CMakeLists.txt  entropy.cpp  entropy.hpp  entropyDirac.hpp  entropyUtils.hpp  error.hpp  metrics.cpp  metrics.hpp  motionContexts.hpp  version.cpp.in  version.hpp  vmc.cpp  vmc.hpp  vmcChrono.cpp  vmcChrono.hpp  vmcCommon.cpp
source/lib/vmeshCommon/util/: box.hpp  checksum.cpp  checksum.hpp  image.cpp  image.hpp  kdtree.hpp  logger.hpp  matrix.hpp  memory.hpp  mesh.cpp  mesh.hpp  misc.cpp  misc.hpp  mutablepriorityheap.hpp  sparsematrix.hpp  triangle.hpp  vector.hpp  verbose.cpp  verbose.hpp
source/lib/vmeshConformance/: CMakeLists.txt  configurationFileParser.cpp  configurationFileParser.hpp  conformance.cpp  conformance.hpp  conformanceParameters.cpp  conformanceParameters.hpp
source/lib/vmeshDecoder/: CMakeLists.txt  conversionAnnex.cpp  decodeVideoStream.cpp  decodeVideoStream.hpp  decoder.cpp  decoder.hpp  decoderOAuvcoord.cpp  sei.cpp
source/lib/vmeshEncoder/: CMakeLists.txt  VMCSegmentation.cpp  baseMeshTracking.cpp  baseMeshTracking.hpp  encoder.cpp  encoder.hpp  encoderAttributeVideo.cpp  encoderOAuvcoord.cpp  encoderPatchAreaCalculation.cpp  encoderPreprocess.cpp  encoderSEI.cpp  encoderZippering.cpp  geometryDecimate.cpp  geometryDecimate.hpp  geometryParametrization.cpp  geometryParametrization.hpp  sequenceInfo.cpp  sequenceInfo.hpp  textureParametrization.cpp  textureParametrization.hpp  transferColor.cpp  transferColor.hpp  triangleMeshDecimator.cpp  triangleMeshDecimator.hpp
source/wrapper/colourConverter/: CMakeLists.txt  colourConverter.cpp  colourConverter.hpp  hdrToolsColourConverter.cpp  hdrToolsColourConverter.hpp  hdrToolsColourConverterImpl.cpp  hdrToolsColourConverterImpl.hpp  internalColourConverter.cpp  internalColourConverter.hpp
source/wrapper/geometryDecoder/: CMakeLists.txt  dracoGeometryDecoder.cpp  dracoGeometryDecoder.hpp  geometryDecoder.cpp  geometryDecoder.hpp  mpegGeometryDecoder.cpp  mpegGeometryDecoder.hpp
source/wrapper/videoDecoder/: CMakeLists.txt  hmVideoDecoder.cpp  hmVideoDecoder.hpp  hmVideoDecoderImpl.cpp  hmVideoDecoderImpl.hpp  shmAppVideoDecoder.cpp  shmAppVideoDecoder.hpp  videoDecoder.cpp  videoDecoder.hpp  vtmVideoDecoder.cpp  vtmVideoDecoder.hpp  vtmVideoDecoderCfg.cpp  vtmVideoDecoderCfg.hpp  vtmVideoDecoderImpl.cpp  vtmVideoDecoderImpl.hpp  vvVideoDecoder.cpp  vvVideoDecoder.hpp  vvVideoDecoderImpl.cpp  vvVideoDecoderImpl.hpp
source/wrapper/videoEncoder/: CMakeLists.txt  hmVideoEncoder.cpp  hmVideoEncoder.hpp  hmVideoEncoderCfg.cpp  hmVideoEncoderCfg.hpp  hmVideoEncoderImpl.cpp  hmVideoEncoderImpl.hpp  shmAppVideoEncoder.cpp  shmAppVideoEncoder.hpp  videoEncoder.cpp  videoEncoder.hpp  vtmVideoEncoder.cpp  vtmVideoEncoder.hpp  vtmVideoEncoderCfg.cpp  vtmVideoEncoderCfg.hpp  vtmVideoEncoderImpl.cpp  vtmVideoEncoderImpl.hpp  vvVideoEncoder.cpp  vvVideoEncoder.hpp  vvVideoEncoderImpl.cpp  vvVideoEncoderImpl.hpp
(+220 files in other folders)
